<resources>
    <string name="app_name">InsurPlay</string>
    <string name="title_activity_test">Test</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_login_button">Facebook</string>
    <string name="google_login_button">Google</string>
    <string name="instagram_login_button">Instagram</string>
    <string name="twitter_login_button">Twitter</string>
    <string name="jugar_button">Jugar</string>
    <string name="mis_logros__button">Mis Logros</string>
    <string name="beneficios_button">Beneficios</string>
</resources>
